# NFL-Gambling-Market-Analysis

./: .gitignore  Analysis.html  Analysis_Report.md  Dataset.xlsx  Dockerfile  NFL In-Month Forecasting.html  NFL Weather Data Scrapping.html  NFL Weather Scrapping.html  README.md  app.py  docker-compose.yml  main.py  nfl_data_with_meteostat_weather.csv  pyproject.toml  requirements.txt  stadium_coordinates.csv
.github/workflows/: ci.yml
models/: best_model.joblib
src/: backtesting.py  betting_strategy.py  data_preprocessing.py  elo_rating.py  feature_engineering.py  model_training.py  report_generator.py  run_analysis.py  visualizations.py
tests/: test_pipeline.py
