[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl-gambling-market-analysis"
version = "1.0.0"
description = "A predictive MLOps pipeline for forecasting NFL game totals (Over/Under) and simulating value-betting sizing strategies."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Nishant Iyer" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
    "optuna>=3.0.0",
    "shap>=0.40.0",
    "matplotlib>=3.4.0",
    "plotly>=5.0.0",
    "streamlit>=1.10.0",
    "openpyxl>=3.0.0",
    "joblib>=1.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0"
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]
py-modules = ["main", "app"]
